adding sensor measurements

--- a/package.json
+++ b/package.json
@@ -29,5 +29,8 @@
     "es6-shim": "^0.31.0",
     "pg": "^4.3.0",
     "sql": "^0.51.0"
+  },
+  "devDependencies": {
+    "eslint": "^0.20.0"
   }
 }
