--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start-db-container": "docker rm 6element-database; docker run --name 6element-database -p 6000:5432 -e POSTGRES_PASSWORD=password -d postgres:9.4",
     "watch": "watchify client/src/main.js -o client/app.js -d -v",
-    "build": "browserify client/src/main.js -o client/app.js -d"
+    "build": "browserify client/src/main.js -o client/app.js -d",
+    "start": "node server/index.js"
   },
   "repository": {
     "type": "git",
@@ -29,7 +30,9 @@
   "homepage": "https://github.com/anthill/6element",
   "dependencies": {
     "browserify": "^10.2.0",
+    "compression": "^1.4.4",
     "es6-shim": "^0.31.0",
+    "express": "^4.12.4",
     "leaflet": "^0.7.3",
     "pg": "^4.3.0",
     "react": "^0.13.3",
