--- a/package.json
+++ b/package.json
@@ -6,9 +6,10 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start-db-container": "docker rm 6element-database; docker run --name 6element-database -p 6000:5432 -e POSTGRES_PASSWORD=password -d postgres:9.4",
-    "watch": "watchify client/src/main.js -o client/app.js -d -v",
-    "build": "browserify client/src/main.js -o client/app.js -d",
-    "start": "node server/index.js"
+    "watch": "watchify client/src/main.js -o client/browserify-bundle.js -d -v",
+    "build": "browserify client/src/main.js -o client/browserify-bundle.js -d",
+    "start": "node server/index.js",
+    "lint": "eslint ./" 
   },
   "repository": {
     "type": "git",
@@ -29,9 +30,10 @@
   },
   "homepage": "https://github.com/anthill/6element",
   "dependencies": {
+    "better-log": "^1.1.0",
     "browserify": "^10.2.0",
     "compression": "^1.4.4",
-    "es6-shim": "^0.31.0",
+    "es6-shim": "^0.31.2",
     "express": "^4.12.4",
     "leaflet": "^0.7.3",
     "pg": "^4.3.0",
