--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "watch": "watchify client/src/main.js -o client/browserify-bundle.js -d -v",
     "build": "browserify client/src/main.js -o client/browserify-bundle.js -d",
     "start": "node server/index.js",
-    "lint": "eslint ./" 
+    "lint": "eslint ./"
   },
   "repository": {
     "type": "git",
@@ -36,6 +36,7 @@
     "es6-shim": "^0.31.2",
     "express": "^4.12.4",
     "leaflet": "^0.7.3",
+    "moment": "^2.10.3",
     "pg": "^4.3.0",
     "react": "^0.13.3",
     "sql": "^0.51.0"
