--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start-db-container": "docker rm 6element-database; docker run --name 6element-database -p 6000:5432 -e POSTGRES_PASSWORD=password -d postgres:9.4",
+    "sql-generate": "node-sql-generate --dsn postgres://postgres:password@localhost:6000/postgres > ./database/management/declarations.js",
     "watch": "watchify client/src/main.js -o client/browserify-bundle.js -d -v",
     "build": "browserify client/src/main.js -o client/browserify-bundle.js -d",
     "start": "node server/index.js",
@@ -39,7 +40,8 @@
     "moment": "^2.10.3",
     "pg": "^4.3.0",
     "react": "^0.13.3",
-    "sql": "^0.51.0"
+    "sql": "^0.51.0",
+    "sql-generate": "^1.0.0"
   },
   "devDependencies": {
     "eslint": "^0.21.0",
