--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
   "dependencies": {
     "6sense": "0.0.4",
     "better-log": "^1.1.0",
+    "body-parser": "^1.10.1",
     "browserify": "^10.2.0",
     "compression": "^1.4.4",
     "es6-shim": "^0.31.2",
