--- a/package.json
+++ b/package.json
@@ -44,7 +44,8 @@
     "react": "^0.12.2",
     "react-chartjs": "^0.5.0",
     "sql": "^0.51.0",
-    "sql-generate": "^1.0.0"
+    "sql-generate": "^1.0.0",
+    "xml": "^1.0.0"
   },
   "devDependencies": {
     "eslint": "^0.21.0",
