--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,6 @@
 6element:
   build: .
-  command: forever server/index.js
+  command: nodemon server/index.js
   links:
    - "db:postgres"
   ports:
@@ -8,7 +8,11 @@
   environment:
    - VIRTUAL_HOST=6element.ants.builders 
    - VIRTUAL_PORT=4000
+  volumes:
+   - .:/6element
 db:
   image: postgres:9.4
   environment:
    - POSTGRES_PASSWORD=password
+  ports:
+   - "5432:5432"
