--- a/package.json
+++ b/package.json
@@ -43,6 +43,8 @@
     "pg": "^4.3.0",
     "react": "^0.12.2",
     "react-chartjs": "^0.5.0",
+    "socket.io": "^1.3.5",
+    "socket.io-client": "^1.3.5",
     "sql": "^0.51.0",
     "sql-generate": "^1.0.0"
   },
