--- a/compose-prod.yml
+++ b/compose-prod.yml
@@ -1,5 +1,6 @@
 6element:
   build: .
+  dockerfile: DockerfileProd
   command: bash -c "npm install && npm run build && node server/index.js"
   links:
    - "db:postgres"
