--- a/app/package.json
+++ b/app/package.json
@@ -52,7 +52,7 @@
     "eslint": "^0.21.0",
     "gulp": "~3.8.8",
     "gulp-livereload": "~2.1.1",
-    "gulp-nodemon": "~1.0.4",
+    "gulp-nodemon": "^2.0.3",
     "gulp-plumber": "~0.6.6",
     "vinyl-source-stream": "^1.1.0",
     "watchify": "^3.2.1"
