--- a/app/package.json
+++ b/app/package.json
@@ -4,7 +4,8 @@
   "description": "Reducing waste with sensors and an app",
   "main": "index.js",
   "scripts": {
-    "start": "gulp --gulpfile app/gulpfile.js",
+    "dev": "gulp dev --gulpfile app/gulpfile.js ",
+    "prod": "gulp prod --gulpfile app/gulpfile.js ",
     "sql-generate": "node-sql-generate --dsn postgres://postgres:password@$(POSTGRES_PORT_5432_TCP_ADDR):$(POSTGRES_PORT_5432_TCP_PORT)/postgres > ./database/management/declarations.js",
     "watch": "watchify app/client/src/main.js -o app/client/browserify-bundle.js -d -v",
     "build": "browserify app/client/src/main.js -o app/client/browserify-bundle.js -d",
@@ -51,8 +52,8 @@
   "devDependencies": {
     "eslint": "^0.21.0",
     "gulp": "~3.8.8",
+    "gulp-express": "^0.3.5",
     "gulp-livereload": "~2.1.1",
-    "gulp-nodemon": "^2.0.3",
     "gulp-plumber": "~0.6.6",
     "vinyl-source-stream": "^1.1.0",
     "watchify": "^3.2.1"
