--- a/compose-dev.yml
+++ b/compose-dev.yml
@@ -10,6 +10,7 @@
    - VIRTUAL_HOST=6element.ants.builders 
    - VIRTUAL_PORT=4000
    - SOCKETIO_SERVER=http://$(boot2docker ip)/
+   - DEBUG=true
   volumes:
    - app:/6element/app
 db:
