--- a/app/package.json
+++ b/app/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "dev": "gulp dev --gulpfile app/gulpfile.js",
     "prod": "gulp prod --gulpfile app/gulpfile.js",
-    "sql-generate": "node-sql-generate --dsn postgres://postgres:password@$(POSTGRES_PORT_5432_TCP_ADDR):$(POSTGRES_PORT_5432_TCP_PORT)/postgres > ./database/management/declarations.js",
+    "sql-generate": "node-sql-generate --dsn postgres://postgres:password@$POSTGRES_PORT_5432_TCP_ADDR:$POSTGRES_PORT_5432_TCP_PORT/postgres > ./app/database/management/declarations.js",
     "lint": "eslint ./"
   },
   "repository": {
@@ -39,6 +39,7 @@
     "leaflet": "^0.7.3",
     "moment": "^2.10.3",
     "pg": "^4.3.0",
+    "quipu": "^0.1.0",
     "react": "^0.12.2",
     "react-chartjs": "^0.5.0",
     "socket.io": "^1.3.5",
