--- a/app/package.json
+++ b/app/package.json
@@ -42,6 +42,7 @@
     "quipu": "^0.1.0",
     "react": "^0.12.2",
     "react-chartjs": "^0.5.0",
+    "request": "^2.58.0",
     "socket.io": "^1.3.5",
     "socket.io-client": "^1.3.5",
     "sql": "^0.51.0",
