--- a/app/package.json
+++ b/app/package.json
@@ -32,8 +32,8 @@
     "better-log": "^1.1.0",
     "body-parser": "^1.10.1",
     "browserify": "^10.2.0",
-    "chart.js": "^1.0.2",
     "compression": "^1.4.4",
+    "dygraphs": "^1.1.1",
     "es6-shim": "^0.31.2",
     "express": "^4.12.4",
     "leaflet": "^0.7.3",
@@ -41,7 +41,6 @@
     "pg": "^4.3.0",
     "quipu": "^0.1.0",
     "react": "^0.13.3",
-    "react-chartjs": "^0.5.0",
     "request": "^2.58.0",
     "socket.io": "^1.3.5",
     "socket.io-client": "^1.3.5",
