--- a/app/package.json
+++ b/app/package.json
@@ -7,7 +7,8 @@
     "dev": "gulp dev --gulpfile app/gulpfile.js",
     "prod": "gulp prod --gulpfile app/gulpfile.js",
     "sql-generate": "node-sql-generate --dsn postgres://postgres:password@$POSTGRES_PORT_5432_TCP_ADDR:$POSTGRES_PORT_5432_TCP_PORT/postgres > ./app/database/management/declarations.js",
-    "lint": "eslint ./"
+    "lint": "eslint ./",
+    "test": "mocha test/automated/*"
   },
   "repository": {
     "type": "git",
