--- a/app/package.json
+++ b/app/package.json
@@ -4,8 +4,10 @@
   "description": "Reducing waste with sensors and an app",
   "main": "index.js",
   "scripts": {
-    "dev": "gulp dev --gulpfile app/gulpfile.js",
-    "prod": "gulp prod --gulpfile app/gulpfile.js",
+    "start-admin-dev": "gulp admin-dev --gulpfile app/gulpfile.js",
+    "start-admin-prod": "gulp admin-prod --gulpfile app/gulpfile.js",
+    "start-app-dev": "gulp app-dev --gulpfile app/gulpfile.js",
+    "start-app-prod": "gulp app-prod --gulpfile app/gulpfile.js",
     "sql-generate": "node-sql-generate --dsn postgres://postgres:password@$POSTGRES_PORT_5432_TCP_ADDR:$POSTGRES_PORT_5432_TCP_PORT/postgres > ./app/database/management/declarations.js",
     "lint": "eslint ./",
     "test": "mocha test/automated/*"
