--- a/compose-dev.yml
+++ b/compose-dev.yml
@@ -1,15 +1,29 @@
-6element:
+6elementapp:
   build: .
-  command: bash -c "npm run dev"
+  command: bash -c "npm run start-app-dev"
   links:
    - "db:postgres"
   ports:
    - "4000:4000"
-   - "35729:35729"
   environment:
    - VIRTUAL_HOST=6element.ants.builders 
    - VIRTUAL_PORT=4000
    - DEBUG=true
+   - NODE_ENV=development
+  volumes:
+   - app:/6element/app
+6elementadmin:
+  build: .
+  command: bash -c "npm run start-admin-dev"
+  links:
+   - "db:postgres"
+  ports:
+   - "4001:4001"
+  environment:
+   - VIRTUAL_HOST=admin.6element.ants.builders 
+   - VIRTUAL_PORT=4001
+   - DEBUG=true
+   - NODE_ENV=development
   volumes:
    - app:/6element/app
 db:
