--- a/compose-init.yml
+++ b/compose-init.yml
@@ -17,6 +17,11 @@ db:
    image: postgres:9.4
    environment:
       - POSTGRES_PASSWORD=elements
-   volumes:
-      - /data/6element/db:/var/lib/postgresql/data
+   volumes_from:
+      - data
    restart: always
+
+data:
+   image: busybox
+   volumes:
+      - /var/lib/postgresql/data
