--- a/compose-dev.yml
+++ b/compose-dev.yml
@@ -19,3 +19,10 @@ db:
       - POSTGRES_PASSWORD=elements
    ports:
       - "5432:5432"
+   volumes_from:
+      - data
+
+data:
+   image: busybox
+   volumes:
+      - /var/lib/postgresql/data
