moved back to good old version

--- a/compose-init.yml
+++ b/compose-init.yml
@@ -8,7 +8,7 @@
    environment:
       - VIRTUAL_HOST=6element.ants.builders 
       - VIRTUAL_PORT=4000
-      - POSTGRES_CONSTRING="postgres://postgres:elements@db:5432/postgres"
+      - POSTGRES_PASSWORD=elements
    volumes:
       - app:/6element/app
    restart: always
