--- a/app/.eslintrc
+++ b/app/.eslintrc
@@ -27,8 +27,7 @@
         "camelcase": 0,
         "no-extra-strict": 0,
         "no-spaced-func": 0,
-        "consistent-return": 0,
-        "comma-spacing": 0
+        "consistent-return": 0
     },
     "globals": {
         "Promise": true
