--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "app.js",
   "scripts": {
     "watch": "watchify src/main.js -o app.js -d -v",
-    "build": "browserify src/main.js -o app.js -d",
+    "build": "browserify src/main.js -o app.js",
+    "start": "devserver",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -19,12 +20,14 @@
   },
   "homepage": "https://github.com/anthill/6elementApp",
   "dependencies": {
+    "bootstrap": "^3.3.5",
     "browserify": "^10.2.4",
     "moment": "^2.10.3",
     "react": "^0.13.3"
   },
   "devDependencies": {
-    "eslint": "^0.21.0",
+    "eslint": "^0.24.1",
+    "grunt-devserver": "^0.6.0",
     "watchify": "^3.2.1"
   }
 }
