changed app to core

--- a/compose-init.yml
+++ b/compose-init.yml
@@ -10,7 +10,7 @@
       - VIRTUAL_PORT=4000
       - POSTGRES_PASSWORD=elements
    volumes:
-      - app:/6element/app
+      - core:/6element/core
 
 db:
    image: postgres:9.4
