--- a/compose-dev.yml
+++ b/compose-dev.yml
@@ -11,7 +11,7 @@ app:
       - POSTGRES_PASSWORD=elements
       - NODE_ENV=development
    volumes:
-      - app:/6element/app
+      - core:/6element/core
 admin:
    build: .
    command: npm run start-admin-dev
@@ -25,7 +25,7 @@ admin:
       - POSTGRES_PASSWORD=elements
       - NODE_ENV=development
    volumes:
-      - app:/6element/app
+      - core:/6element/core
 db:
    image: postgres:9.4
    environment:
