--- a/package.json
+++ b/package.json
@@ -4,10 +4,11 @@
   "description": "First sketches of the 6element App",
   "main": "app.js",
   "scripts": {
-    "postinstall": "cp ../git-hooks/pre-commit ../.git/hooks/pre-commit; chmod a+x ../.git/hooks/pre-commit",
+    "postinstall": "cp git-hooks/pre-commit .git/hooks/pre-commit; chmod a+x .git/hooks/pre-commit",
     "watch": "watchify src/main.js -o app.js -d -v",
     "build": "browserify src/main.js -o app.js",
     "start": "devserver",
+    "lint": "eslint ./",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
