--- a/core/package.json
+++ b/core/package.json
@@ -9,6 +9,8 @@
     "start-admin-prod": "gulp admin-prod --gulpfile core/gulpfile.js",
     "start-app-dev": "gulp app-dev --gulpfile core/gulpfile.js",
     "start-app-prod": "gulp app-prod --gulpfile core/gulpfile.js",
+    "start-endpoint-dev": "gulp serve-endpoint --gulpfile core/gulpfile.js",
+    "start-endpoint-prod": "gulp serve-endpoint --gulpfile core/gulpfile.js",
     "init-db": "gulp init --gulpfile core/gulpfile.js",
     "lint": "eslint ./",
     "test": "mocha test/automated/*"
@@ -40,14 +42,14 @@
     "dygraphs": "^1.1.1",
     "es6-shim": "^0.31.2",
     "express": "^4.12.4",
-    "immutable": "^3.7.4",
-    "leaflet": "^0.7.3",
-    "moment": "^2.10.3",
-    "pg": "^4.3.0",
     "gulp": "~3.8.8",
     "gulp-express": "git://github.com/gimm/gulp-express.git#9a3c842b55246fe039c85b56b4a8e5401ce779bf",
     "gulp-livereload": "~2.1.1",
     "gulp-plumber": "^1.0.1",
+    "immutable": "^3.7.4",
+    "leaflet": "^0.7.3",
+    "moment": "^2.10.3",
+    "pg": "^4.3.0",
     "quipu": "^0.1.0",
     "react": "^0.13.3",
     "request": "^2.58.0",
