read the dataset, parse it, get place ids, cut it by place id, sort it by date. Next step : sending theses datas to the web client

--- a/compose-dev.yml
+++ b/compose-dev.yml
@@ -15,6 +15,7 @@ app:
       - NODE_ENV=development
    volumes:
       - ./core:/6element/core
+      - /data/6element:/6element/data
 endpoint:
    build: .
    dockerfile: core/Dockerfile
