bug fix in the frontend (script crashed), elint error fixed

--- a/core/.eslintrc
+++ b/core/.eslintrc
@@ -28,7 +28,9 @@
         "camelcase": 0,
         "no-extra-strict": 0,
         "no-spaced-func": 0,
-        "consistent-return": 0
+        "consistent-return": 0,
+        "no-loop-func": 1
+
     },
     "globals": {
         "Promise": true,
