--- a/core/clients/Citizen/package.json
+++ b/core/clients/Citizen/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "6elementApp",
+  "name": "6elementCitizen",
   "version": "0.0.0",
   "description": "First sketches of the 6element App",
   "main": "app.js",
