--- a/core/package.json
+++ b/core/package.json
@@ -7,8 +7,8 @@
     "postinstall": "cp ../git-hooks/pre-commit ../.git/hooks/pre-commit; chmod a+x ../.git/hooks/pre-commit",
     "start-admin-dev": "gulp admin-dev --gulpfile core/gulpfile.js",
     "start-admin-prod": "gulp admin-prod --gulpfile core/gulpfile.js",
-    "start-app-dev": "gulp app-dev --gulpfile core/gulpfile.js",
-    "start-app-prod": "gulp app-prod --gulpfile core/gulpfile.js",
+    "start-dashboard-dev": "gulp dashboard-dev --gulpfile core/gulpfile.js",
+    "start-dashboard-prod": "gulp dashboard-prod --gulpfile core/gulpfile.js",
     "start-endpoint-dev": "gulp serve-endpoint --gulpfile core/gulpfile.js",
     "start-endpoint-prod": "gulp serve-endpoint --gulpfile core/gulpfile.js",
     "init-db": "gulp init --gulpfile core/gulpfile.js",
