--- a/compose-dev.yml
+++ b/compose-dev.yml
@@ -1,7 +1,7 @@
-app:
+dashboard:
    build: .
    dockerfile: core/Dockerfile
-   command: npm run start-app-dev
+   command: npm run start-dashboard-dev
    links:
       - db
       - endpoint
