--- a/core/.eslintrc
+++ b/core/.eslintrc
@@ -8,16 +8,16 @@
         "dot-notation": 0,
         "no-shadow": 1,
         "curly": 0,
-        "no-use-before-define": "no-func",
+        "no-use-before-define": [2, "nofunc"],
         "no-native-reassign": 1,
         "no-process-exit": 0,
         "no-func-assign": 0,
         
         "eol-last": 1,
-        "no-space-before-semi": 1,
-        "new-cap": {
+        "semi-spacing": 1,
+        "new-cap": [2, {
             "capIsNewExceptions": ["React"]
-        },
+        }],
         "semi": 0,
         "quotes": 0,
         "no-trailing-spaces": 0,
