--- a/core/package.json
+++ b/core/package.json
@@ -11,9 +11,12 @@
     "start-dashboard-prod": "gulp dashboard-prod --gulpfile core/gulpfile.js",
     "start-endpoint-dev": "gulp serve-endpoint --gulpfile core/gulpfile.js",
     "start-endpoint-prod": "gulp serve-endpoint --gulpfile core/gulpfile.js",
+    "start-citizen-dev": "gulp citizen-dev --gulpfile core/gulpfile.js",
+    "start-citizen-prod": "gulp citizen-prod --gulpfile core/gulpfile.js",
     "init-db": "gulp init --gulpfile core/gulpfile.js",
     "lint": "eslint ./",
-    "test": "mocha test/automated/*"
+    "test": "mocha test/automated/*",
+    "validate": "npm ls"
   },
   "repository": {
     "type": "git",
@@ -42,6 +45,7 @@
     "dygraphs": "^1.1.1",
     "es6-shim": "^0.31.2",
     "express": "^4.12.4",
+    "flux": "^2.0.3",
     "gulp": "~3.8.8",
     "gulp-express": "git://github.com/gimm/gulp-express.git#9a3c842b55246fe039c85b56b4a8e5401ce779bf",
     "gulp-livereload": "~2.1.1",
@@ -65,7 +69,13 @@
     "xml": "^1.0.0"
   },
   "devDependencies": {
-    "eslint": "^0.21.0",
+    "eslint": "^1.3.1",
+    "precommit-hook-eslint": "^3.0.0",
     "watchify": "^3.2.1"
-  }
+  },
+  "pre-commit": [
+    "lint",
+    "validate",
+    "test"
+  ]
 }
