--- a/rebuild-db.yml
+++ b/rebuild-db.yml
@@ -5,12 +5,13 @@
       - db
    environment:
       - POSTGRES_USER=postgres
-      - PGPASSWORD=elements
+      - PGPASSWORD=elements # For pg_gump purposes?
       - POSTGRES_PASSWORD=elements
       # - BACKUP=backups/save.txt.gz
    volumes:
       - ./core:/6element/core
       - ./app:/6element/app
+      - ./tools:/6element/tools
       - /data/6element:/6element/app/data
       - /data/6element/backups:/6element/app/data/backups
 
