--- a/package.json
+++ b/package.json
@@ -57,7 +57,13 @@
     "twilio": "^2.2.1",
     "ubique": "^0.5.0",
     "vinyl-source-stream": "^1.1.0",
-    "xml": "^1.0.0"
+    "xml": "^1.0.0",
+    "bootstrap": "^3.3.5",
+    "jquery": "^2.1.4",
+    "leaflet": "^0.7.5",
+    "react": "^0.13.3",
+    "reactify": "^1.1.1",
+    "turf": "^2.0.2"
   },
   "devDependencies": {
     "eslint": "^1.3.1",
