--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "browserify": "^10.2.0",
     "compression": "^1.4.4",
     "dygraphs": "^1.1.1",
+    "es6-promise": "^3.0.2",
     "es6-shim": "^0.31.2",
     "express": "^4.12.4",
     "flux": "^2.0.3",
