--- a/package.json
+++ b/package.json
@@ -38,7 +38,9 @@
     "es6-promise": "^3.0.2",
     "es6-shim": "^0.31.2",
     "express": "^4.12.4",
+    "fbjs": "^0.2.1",
     "flux": "^2.0.3",
+    "google-maps-api": "^1.1.0",
     "gulp": "~3.9.0",
     "gulp-express": "git://github.com/gimm/gulp-express.git#9a3c842b55246fe039c85b56b4a8e5401ce779bf",
     "gulp-livereload": "~2.1.1",
@@ -47,12 +49,16 @@
     "jquery": "^2.1.4",
     "keymirror": "^0.1.1",
     "leaflet": "^0.7.5",
+    "material-design-lite": "^1.0.4-2",
+    "material-ui": "^0.12.1",
     "moment": "^2.10.3",
     "node-schedule": "^0.2.9",
     "opening_hours": "^3.3.0",
     "pg": "^4.3.0",
     "quipu": "^0.1.0",
     "react": "^0.13.3",
+    "react-dom": "^0.14.0-rc1",
+    "react-tap-event-plugin": "^0.1.8",
     "reactify": "^1.1.1",
     "request": "^2.58.0",
     "socket.io": "^1.3.5",
