update distance field

--- a/docker-compose-init-db.yml
+++ b/docker-compose-init-db.yml
@@ -23,4 +23,5 @@ db:
    environment:
       - POSTGRES_USER=postgres
       - POSTGRES_PASSWORD=postgres
+      - PGPASSWORD=postgres
    tty: true
