--- a/package.json
+++ b/package.json
@@ -3,7 +3,10 @@
   "version": "1.0.0",
   "description": "Reducing waste with sensors and an app",
   "main": "index.js",
-  "scripts": {},
+  "scripts": {
+    "lint": "eslint .",
+    "validate": "npm ls"
+  },
   "repository": {
     "type": "git",
     "url": "https://github.com/anthill/6element.git"
@@ -49,5 +52,10 @@
     "eslint": "^1.3.1",
     "precommit-hook-eslint": "^3.0.0",
     "watchify": "^3.2.1"
-  }
+  },
+  "pre-commit": [
+    "lint",
+    "validate",
+    "test"
+  ]
 }
