--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "react-dom": "^0.14.0-rc1",
     "react-tap-event-plugin": "^0.1.8",
     "reactify": "^1.1.1",
+    "request": "^2.65.0",
     "sql": "^0.60.0",
     "sql-generate": "^1.1.0"
   },
