add package.json scripts

--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "main": "index.js",
   "scripts": {
     "lint": "eslint .",
+    "watch": "watchify -t reactify src/main.js -o Citizen-browserify-bundle.js -v -d",
+    "build": "browserify -t reactify src/main.js -o Citizen-browserify-bundle.js -v",
     "validate": "npm ls"
   },
   "repository": {
@@ -54,8 +56,6 @@
     "watchify": "^3.2.1"
   },
   "pre-commit": [
-    "lint",
-    "validate",
-    "test"
+    "lint"
   ]
 }
