First shot at server-side rendering. Includes pre-compiling all jsx files and a bunch of refactoring to move client-side only dependencies to main.js (to inject them dynamically in components)

--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,6 @@ node_modules
 data/*.json
 !data/dictionary.json
 !data/networks.json
+
+# files generated for server-side purposes
+src/views/*.js
