--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "babel-preset-react": "^6.1.18",
     "body-parser": "^1.10.1",
     "browserify": "^10.2.0",
+    "compression": "^1.6.0",
     "core-js": "^1.2.1",
     "es6-shim": "^0.31.3",
     "express": "^4.12.4",
