update REACT & friends release

--- a/package.json
+++ b/package.json
@@ -31,22 +31,24 @@
   },
   "homepage": "https://github.com/anthill/6element",
   "dependencies": {
+    "babel-cli": "^6.2.0",
+    "babel-preset-react": "^6.1.18",
     "body-parser": "^1.10.1",
     "core-js": "^1.2.1",
     "es6-shim": "^0.31.3",
     "express": "^4.12.4",
     "google-maps-api": "^1.1.0",
     "jquery": "^2.1.4",
+    "jsdom": "^7.0.2",
     "leaflet": "^0.7.5",
-    "material-design-lite": "^1.0.4-2",
-    "material-ui": "^0.12.1",
+    "material-ui": "^0.13.3",
     "opening_hours": "^3.3.0",
     "pg": "^4.4.2",
     "pg-hstore": "^2.3.2",
     "proj4": "^2.3.10",
-    "react": "^0.13.3",
+    "react": "^0.14.0",
     "react-dom": "^0.14.0-rc1",
-    "react-tap-event-plugin": "^0.1.8",
+    "react-tap-event-plugin": "^0.2.1",
     "reactify": "^1.1.1",
     "request": "^2.65.0",
     "sql": "^0.60.0",
