--- a/package.json
+++ b/package.json
@@ -42,7 +42,7 @@
     "express": "^4.12.4",
     "google-maps-api": "^1.1.0",
     "gulp": "^3.9.0",
-    "gulp-bable": "^6.1.0",
+    "gulp-babel": "^6.1.0",
     "jsdom": "^7.0.2",
     "leaflet": "^0.7.5",
     "material-ui": "^0.13.3",
