--- a/package.json
+++ b/package.json
@@ -58,6 +58,8 @@
     "react-tap-event-plugin": "^0.2.1",
     "reactify": "^1.1.1",
     "request": "^2.65.0",
+    "socket.io": "^1.3.7",
+    "socket.io-client": "^1.3.7",
     "sql": "^0.60.0",
     "sql-generate": "^1.1.0",
     "vinyl-source-stream": "^1.1.0",
