--- a/package.json
+++ b/package.json
@@ -5,15 +5,26 @@
   "main": "index.js",
   "scripts": {
     "lint": "eslint .",
-    "watch": "watchify src/main.js -o Citizen-browserify-bundle.js -v -d",
-    "watch-jsx": "babel --presets react src/views/*.jsx --out-dir . --watch",
-    "build": "browserify src/main.js -o Citizen-browserify-bundle.js -v",
-    "build-jsx": "babel --presets react src/views/*.jsx --out-dir .",
-    "validate": "npm ls",
-    "start-dev": "gulp dev",
-    "start-prod": "gulp prod",
+    "watch": "npm-run-all --parallel 'watch:*'",
+    "watch:client": "watchify src/main.js -o Citizen-browserify-bundle.js -v -d",
+    "watch:jsx-for-server-side": "babel src/views/*.jsx --out-dir . --watch",
+    "build-prod": "npm-run-all build:jsx-for-server-side build:client-prod",
+    "build-dev": "npm-run-all --parallel build:jsx-for-server-side build:client-prod",
+    "build:client-prod": "browserify src/main.js -p [minifyify --no-map] -o src/browserify-bundle.js -v",
+    "build:client-dev": "browserify src/main.js -o src/browserify-bundle.js -v",
+    "build:jsx-for-server-side": "babel src/views/*.jsx --out-dir .",
     "stop-dev": "docker-compose -f compose-dev.yml stop",
-    "stop-prod": "docker-compose -f compose-prod.yml stop"
+    "stop-prod": "docker-compose -f compose-prod.yml stop",
+    "start": "docker-compose -f compose-prod.yml up --force-recreate",
+    "prestart": "npm run build-prod",
+    "serve-dev": "docker-compose -f compose-dev.yml up --force-recreate",
+    "start-dev": "npm-run-all --parallel serve-dev watch"
+  },
+  "babel": {
+      "presets": ["react"]
+  },
+  "browserify": {
+      "transform": ["reactify"]
   },
   "repository": {
     "type": "git",
@@ -67,6 +78,7 @@
   },
   "devDependencies": {
     "eslint": "^1.3.1",
+    "npm-run-all": "^1.3.4",
     "precommit-hook-eslint": "^3.0.0"
   },
   "pre-commit": [
