--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "lint": "eslint .",
     "watch": "npm-run-all --parallel 'watch:*'",
-    "watch:client": "watchify src/main.js -o Citizen-browserify-bundle.js -v -d",
+    "watch:client": "watchify src/main.js -o src/browserify-bundle.js -v -d",
     "watch:jsx-for-server-side": "babel src/views/*.jsx --out-dir . --watch",
     "build-prod": "npm-run-all build:jsx-for-server-side build:client-prod",
     "build-dev": "npm-run-all --parallel build:jsx-for-server-side build:client-prod",
