--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "start": "docker-compose -p 6element -f compose-prod.yml up --force-recreate",
     "prestart": "npm run build-prod",
     "serve-dev": "docker-compose -p 6element -f compose-dev.yml up --force-recreate",
-    "start-dev": "npm-run-all --parallel serve-dev watch"
+    "start-dev": "npm-run-all --parallel serve-dev watch",
+    "validate": "npm ls"
   },
   "babel": {
     "presets": [
@@ -69,6 +70,7 @@
     "pg": "^4.4.2",
     "pg-hstore": "^2.3.2",
     "proj4": "^2.3.10",
+    "query-string": "^3.0.0",
     "react": "^0.14.0",
     "react-dom": "^0.14.0-rc1",
     "react-tap-event-plugin": "^0.2.1",
